feat: add selector for list api.
